--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
 <body>
 
 </body>
+<script src="script.js"></script>
+<footer class="text-center">
+    Copyright &copy; 2019 designed by Mwaura.
+</footer>
 
 </html>
