--- a/index.html
+++ b/index.html
@@ -2,17 +2,46 @@
 <html lang="en">
 
 <head>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <div id="header" class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>PIZZA HUT</h1>
+                        <div class="row">
+                            <div id="menu" class="col-md-12">
+                                <form action="#Pizzas">
+                                    <input type="submit" value="Menu">
+                                </form>
+                                <form action="#Toppings">
+                                    <input type="submit" value="Our Toppings">
+                                </form>
+                                <form action="#locations">
+                                    <input type="submit" value="Locations">
+                                </form>
+                                <form action="#"
+                                    onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
+                                    <input type="submit" value="Contact Us">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 </body>
-<script src="script.js"></script>
+<script src="js/scripts.js"></script>
 <footer class="text-center">
     Copyright &copy; 2019 designed by Mwaura.
 </footer>
