--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-1">
-                <img src="images/Pizza-Restaurant-Flyer-Template-3.jpg" class="img-responsive">
+            <div class="header">
+                <div class="col-md-4">
+                    <img src="images/Pizza-Restaurant.jpg" class=" img-responsive">
+                </div>
             </div>
             <div class="col-md-8">
                 <div class="row">
@@ -58,16 +59,36 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-md-push-3">
-                        <form action="#randomPizzas">
+                        <form action="#AllPizzas">
                             <input type="submit" value="Pick a Pizza Now!">
                         </form>
                     </div>
                 </div>
             </div>
 
+            <div class="text">
+                Nulla sed leo sed sapien sagittis aliquet. Vivamus vestibulum condimentum massa. </div>
 
-
-
+            <div class="row">
+                <div class="column">
+                    <img src="images/pizza1.jpeg" alt="pizza" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pizza2.jpg" alt="pizza" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pizza3.jpeg" alt="pizza" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pizza4.jpg" alt="pizza" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pizza5.jpeg" alt="pizza" style="width:100%">
+                </div>
+                <div class="column">
+                    <img src="images/pizza6.jpg" alt="pizza" style="width:100%">
+                </div>
+            </div>
 
 
 
