--- a/index.html
+++ b/index.html
@@ -72,21 +72,91 @@
             <div class="row">
                 <div class="column">
                     <img src="images/pizza1.jpeg" alt="pizza" style="width:100%">
+                    <div class="textbox">
+                        <a href="#">BBQ Deluxe</a>
+                    </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza2.jpg" alt="pizza" style="width:100%">
+                    <div class="textbox">
+                        <a href="#">BBQ Deluxe</a>
+                    </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza3.jpeg" alt="pizza" style="width:100%">
+                    <div class="textbox">
+                        <a href="#">BBQ Deluxe</a>
+                    </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza4.jpg" alt="pizza" style="width:100%">
+                    <div class="textbox">
+                        <a href="#">BBQ Deluxe</a>
+                    </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza5.jpeg" alt="pizza" style="width:100%">
+                    <div class="textbox">
+                        <a href="#">BBQ Deluxe</a>
+                    </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza6.jpg" alt="pizza" style="width:100%">
+                    <div class="textbox">
+                        <a href="#">BBQ Deluxe</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div id="locations" class="row">
+                <div class="col-md-12">
+                    <h2 style="text-align: center">Locations!</h2>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3>Pizza Road</h3>
+                            <p>00100 Pizza Hut<br>Kenya, Nairobi<br>0716175419<br>254</p>
+                        </div>
+                        <div class="col-md-6">
+                            <h3>Tasty Pizza</h3>
+                            <p><br>KENYA, NY<br>00100<br>254-716-175-419</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2>Payment for Delivery</h2>
+            <p>Please fill the form below to get your details and Delivery location.Thank you.</p>
+            <div class="row-form">
+                <div class="col-75">
+                    <div class="container">
+                        <form action="action">
+
+                            <div class="row">
+                                <div class="col-50">
+                                    <h3>Billing Address</h3>
+                                    <label for="name"><i class="user"></i> Full Name</label>
+                                    <input type="text" id="fname" name="firstname" placeholder="Nelson M. Doe">
+                                    <label for="email"><i class="envelope"></i> Email</label>
+                                    <input type="text" id="email" name="email" placeholder="Nelson@example.com">
+                                    <label for="adr"><i class="address-card"></i> Address</label>
+                                    <input type="text" id="adr" name="address" placeholder="Waiyaki way">
+                                    <label for="city"><i class="place"></i> City</label>
+                                    <input type="text" id="city" name="city" placeholder="Nairobi">
+
+                                    <div class="row">
+                                        <div class="col-50">
+                                            <label for="state">Country</label>
+                                            <input type="text" id="state" name="state" placeholder="KY">
+                                        </div>
+                                        <div class="col-50">
+                                            <label for="zip">Zip</label>
+                                            <input type="text" id="zip" name="zip" placeholder="00100">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
 
