--- a/index.html
+++ b/index.html
@@ -22,52 +22,92 @@
                         <h1>PIZZA HUT</h1>
                         <div class="row">
                             <div id="menu" class="col-md-12">
-                                <form action="#Pizzas">
+                                <form action="#Menu">
                                     <input type="submit" value="Menu">
                                 </form>
                                 <form action="#Toppings">
-                                    <input type="submit" value="Our Toppings">
+                                    <input type="submit" value="Toppings">
                                 </form>
-                                <form action="#locations">
-                                    <input type="submit" value="Locations">
+                                <form action="#Order">
+                                    <input type="submit" value="Order">
                                 </form>
-                                <form action="#"
-                                    onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
+                                <form action="#Contact Us">
                                     <input type="submit" value="Contact Us">
                                 </form>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="header">
+            <div class="jumbotron">
                 <div class="col-md-4">
                     <img src="images/Pizza-Restaurant.jpg" class=" img-responsive">
                 </div>
-            </div>
-            <div class="col-md-8">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h2>We Have Hundreds of Pizza Recipes!</h2>
-                        <p>At Cam's Pizzeria, we know you want options. Pepperoni? Boring. Cheese? No way! Sausage?
-                            C'mon, let's get creative.</p>
 
-                        <p>We have every pizza ingredient imaginable in our kitchen because we know you take choice
-                            seriously. Take a look through our menu of hundreds of pizza options and we know that you'll
-                            find something you love.</p>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>We Have all types Pizza's from many Recipes!</h2>
+                            <p>At Pizza Hut, we know you want options. Pepperoni? Boring. Cheese? No way! Sausage?
+                                C'mon, let's get creative.Checkout Our freshly made Delicious Pizza .</p>
+
+                            <div id="Toppings" class="row">
+                                <div class="col-md-12">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <form>
+                                                <div class="alert alert-warning" role="alert">Choose your toppings:
+                                                    <h2 style="text-align: center"></h2>
+                                                    <select id="Toppings" onchange="preferedToppings()">
+                                                        <option value="Pepperoni.">Pepperoni.</option>
+                                                        <option value="Mushrooms.">Mushrooms.</option>
+                                                        <option value="Sausage.">Sausage.</option>
+                                                        <option value="Bacon.">Bacon.</option>
+                                                        <option value="Extra cheese.">Extra cheese.</option>
+                                                        <option value="Black olives.">Black olives.</option>
+                                                    </select>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-md-push-3">
-                        <form action="#AllPizzas">
+                        <form action="#Menu">
                             <input type="submit" value="Pick a Pizza Now!">
                         </form>
                     </div>
                 </div>
             </div>
-
-            <div class="text">
-                Nulla sed leo sed sapien sagittis aliquet. Vivamus vestibulum condimentum massa. </div>
+            <div id="Contact Us" class="row">
+                <h5>Contact Us</h5><br <p>Pizza HUT
+                <hr> KENYA, Nairobi<br>00100<br>254-716-175-419</p>
+            </div>
+            <div id="Menu" class="row">
+                <form>
+                    <div class="card bg-warning ">Select your favorite Pizza:
+                        <select id="menu">
+                            <option>BBQ Deluxe</option>
+                            <option>Hawaiian Pizza</option>
+                            <option>Margherita Pizza</option>
+                            <option>BBQ Chicken</option>
+                            <option>Meat-Lover’s Pizza</option>
+                            <option>Pepperoni Pizza</option>
+                        </select>
+                        <br>
+                        <p>We have every pizza ingredient imaginable in our kitchen because we know you take choice
+                            seriously. Take a look through our menu of hundreds of pizza options and we know that
+                            you'll
+                            find something you love.</p><br>
+                        <input type="button" onclick="getOptions()" value="Available pizza's">
+                    </div>
+                </form>
+            </div>
 
             <div class="row">
                 <div class="column">
@@ -79,95 +119,97 @@
                 <div class="column">
                     <img src="images/pizza2.jpg" alt="pizza" style="width:100%">
                     <div class="textbox">
-                        <a href="#">BBQ Deluxe</a>
+                        <a href="#">Hawaiian Pizza</a>
                     </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza3.jpeg" alt="pizza" style="width:100%">
                     <div class="textbox">
-                        <a href="#">BBQ Deluxe</a>
+                        <a href="#">BBQ Chicken</a>
                     </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza4.jpg" alt="pizza" style="width:100%">
                     <div class="textbox">
-                        <a href="#">BBQ Deluxe</a>
+                        <a href="#">Pineapple</a>
                     </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza5.jpeg" alt="pizza" style="width:100%">
                     <div class="textbox">
-                        <a href="#">BBQ Deluxe</a>
+                        <a href="#">Meat-Lover’s Pizza</a>
                     </div>
                 </div>
                 <div class="column">
                     <img src="images/pizza6.jpg" alt="pizza" style="width:100%">
                     <div class="textbox">
-                        <a href="#">BBQ Deluxe</a>
+                        <a href="#">Pepperoni Pizza</a>
                     </div>
                 </div>
             </div>
-
-
-            <div id="locations" class="row">
-                <div class="col-md-12">
-                    <h2 style="text-align: center">Locations!</h2>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h3>Pizza Road</h3>
-                            <p>00100 Pizza Hut<br>Kenya, Nairobi<br>0716175419<br>254</p>
-                        </div>
-                        <div class="col-md-6">
-                            <h3>Tasty Pizza</h3>
-                            <p><br>KENYA, NY<br>00100<br>254-716-175-419</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <h2>Payment for Delivery</h2>
-            <p>Please fill the form below to get your details and Delivery location.Thank you.</p>
-            <div class="row-form">
-                <div class="col-75">
-                    <div class="container">
-                        <form action="action">
-
-                            <div class="row">
-                                <div class="col-50">
-                                    <h3>Billing Address</h3>
-                                    <label for="name"><i class="user"></i> Full Name</label>
-                                    <input type="text" id="fname" name="firstname" placeholder="Nelson M. Doe">
-                                    <label for="email"><i class="envelope"></i> Email</label>
-                                    <input type="text" id="email" name="email" placeholder="Nelson@example.com">
-                                    <label for="adr"><i class="address-card"></i> Address</label>
-                                    <input type="text" id="adr" name="address" placeholder="Waiyaki way">
-                                    <label for="city"><i class="place"></i> City</label>
-                                    <input type="text" id="city" name="city" placeholder="Nairobi">
-
-                                    <div class="row">
-                                        <div class="col-50">
-                                            <label for="state">Country</label>
-                                            <input type="text" id="state" name="state" placeholder="KY">
+            <div id="Order" class="row">
+                <div class="row">
+                    <div class="alert alert-secondary" role="alert">
+                        <div class="card-body">
+                            <div class="col-75">
+                                <div class="container">
+                                    <form action="action">
+                                        <div class="card-title">
+                                            <h2>Payment for Delivery</h2>
                                         </div>
-                                        <div class="col-50">
-                                            <label for="zip">Zip</label>
-                                            <input type="text" id="zip" name="zip" placeholder="00100">
+                                        <div class="row">
+                                            <div class="col-50">
+                                                <h3>Billing Address</h3>
+                                                <label for="name"><i class="user"></i> Full Name</label>
+                                                <input type="text" id="fname" name="firstname"
+                                                    placeholder="Nelson M. Doe">
+                                                <label for="email"><i class="envelope"></i> Email</label>
+                                                <input type="text" id="email" name="email"
+                                                    placeholder="Nelson@example.com">
+                                                <label for="adr"><i class="address-card"></i> Address</label>
+                                                <input type="text" id="adr" name="address"
+                                                    placeholder="134567 Waiyaki way">
+                                                <label for="city"><i class="place"></i> City</label>
+                                                <input type="text" id="city" name="city" placeholder="Nairobi">
+
+                                                <div class="row">
+                                                    <div class="col-50">
+                                                        <label for="state">Country</label>
+                                                        <input type="text" id="state" name="state" placeholder="KENYA">
+                                                    </div>
+                                                    <div class="col-50">
+                                                        <label for="zip">Zip</label>
+                                                        <input type="text" id="zip" name="zip" placeholder="00100">
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
-                                    </div>
+
+                                        <form onsubmit="confirmInput()" action="PizzaHut.com">
+                                            Enter your name: <input id="fname" type="text" size="20">
+                                            <input type="submit">
+                                        </form>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
     </div>
+    </div>
 </body>
-<script src="js/scripts.js"></script>
-<footer class="text-center">
-    Copyright &copy; 2019 designed by Mwaura.
-</footer>
+<script src="/home/mwaura/Documents/WEEK3/Pizza-project/js/scripts.js"></script>
+<div id="footer">
+
+    <div class="top">
+        <a href="index.html">Home</a> | About Us | Promotion| <a href="#">Price &amp; Order</a> | <a href="#">Contact
+            us</a>
+    </div>
+    <div class="middle">
+        Copyright &copy; 2019 designed by Mwaura.
+    </div>
+
+</div>
 
 </html>
