adding contact information

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                     <div class="container">
                                         <form action="action">
                                             <div class="card-title">
-                                                <h2>Payment for Delivery</h2>
+                                                <h4><u>Payment for Delivery</u></h4>
                                             </div>
                                             <div id="templatemo_card">
                                                 <img alt="Credit Cards" src="images/cards.jpg" />
