--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                                 <form action="#Contact Us">
                                     <input type="submit" value="Contact Us">
                                 </form>
-
+                                <form action="#Menu">
+                                    <input type="submit" value="Pick a Pizza Now!"><br>
+                                </form><br><br>
                             </div>
                         </div>
                     </div>
@@ -44,47 +46,29 @@
             </div>
 
             <div class="jumbotron">
-                <div id="Toppings" class="row">
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <form>
-                                    <div class="alert alert-warning" role="alert">
-                                        <h2 style="text-align: center"></h2>
-                                        <select id="Toppings" onchange="preferedToppings()">
-                                            <option value="Pepperoni.">Pepperoni.</option>
-                                            <option value="Mushrooms.">Mushrooms.</option>
-                                            <option value="Sausage.">Sausage.</option>
-                                            <option value="Bacon.">Bacon.</option>
-                                            <option value="Extra cheese.">Extra cheese.</option>
-                                            <option value="Black olives.">Black olives.</option>
-                                        </select>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-md-4">
-
                     <img src="images/Pizza-Restaurant.jpg" class=" img-responsive">
                 </div>
-
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <h2>We Have all types Pizza's from many Recipes!</h2>
-                            <p>At Pizza Hut, we know you want options. Pepperoni? Boring. Cheese? No way! Sausage?
-                                C'mon, let's get creative.Checkout Our freshly made Delicious Pizza .</p>
-
-
-                        </div>
-                    </div>
-                </div>
-
                 <div id="Menu" class="row">
                     <form>
-                        <div class="card bg-warning ">Select your favorite Pizza:
+                        <div class="card bg-warning ">
+                            <div class="col-md-8">
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h2><u>We Have all types Pizza's from many Recipes!</u></h2>
+                                        <p>At Pizza Hut, we know you want options. Pepperoni? Boring. Cheese? No way!
+                                            Sausage?
+                                            C'mon, let's get creative.Checkout Our freshly made Delicious Pizza .</p>
+                                        <p>We have every pizza ingredient imaginable in our kitchen because we know you
+                                            take choice
+                                            seriously. Take a look through our menu of hundreds of pizza options and we
+                                            know that
+                                            you'll
+                                            find something you love.</p><br>
+                                    </div>
+                                </div>
+                            </div>
+                            <p>select your favorite Pizza:</p>
                             <select id="menu">
                                 <option>BBQ Deluxe</option>
                                 <option>Hawaiian Pizza</option>
@@ -93,12 +77,6 @@
                                 <option>Meat-Lover’s Pizza</option>
                                 <option>Pepperoni Pizza</option>
                             </select>
-                            <br>
-                            <p>We have every pizza ingredient imaginable in our kitchen because we know you take choice
-                                seriously. Take a look through our menu of hundreds of pizza options and we know that
-                                you'll
-                                find something you love.</p><br>
-                            <input type="button" onclick="getOptions()" value="Available pizza's">
                         </div>
                     </form>
                 </div>
@@ -141,20 +119,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-6 col-md-push-3">
-                        <form action="#Menu">
-                            <input type="submit" value="Pick a Pizza Now!"><br>
-                        </form>
-                    </div><br><br>
-                </div>
+
                 <div class="container-fluid order" id="make-order">
                     <div class="order-overlay">
                         <div class="controls-top text-center" id="Order-now"> </div>
                         <div class="row">
                             <div class="col-sm-5">
                                 <form action="">
-                                    <select class="browser-default custom-select custom-select-md mb-3 name">
+                                    <select class="custom-select custom-select-md mb-3 name">
                                         <option value="BBQ Chicken">BBQ Chicken</option>
                                         <option value="Pepperoni Pizza">Pepperoni Pizza</option>
                                         <option value="BBQ Deluxe">BBQ Deluxe</option>
@@ -168,7 +140,7 @@
                                         <option value="Margherita">Margherita</option>
                                     </select>
                                     <label for="select">Select Size</label>
-                                    <select class="browser-default custom-select custom-select-md mb-3" id="size">
+                                    <select class=" custom-select custom-select-md mb-3" id="size">
                                         <option selected value="0">Select size here</option>
                                         <option value="large">Large -- $20</option>
                                         <option value="medium">Medium -- $10</option>
@@ -176,9 +148,9 @@
                                     </select>
                                     <label for="Toppings">Select Your Toppings at $5 each</label><br>
                                     <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" class="custom-control-input" id="Sausage" value="Sausage"
-                                            name="toppings">
-                                        <label class="custom-control-label" for="Sausage">Sausage</label>
+                                        <input type="checkbox" class="custom-control-input" id="Extra cheese"
+                                            value="Extra cheese" name="toppings">
+                                        <label class="custom-control-label" for="Extra cheese">Extra cheese</label>
                                     </div>
                                     <div class="custom-control custom-checkbox custom-control-inline">
                                         <input type="checkbox" class="custom-control-input" id="Black olives."
@@ -195,9 +167,13 @@
                                             value="Pepperoni" name="toppings">
                                         <label class="custom-control-label" for="Pepperoni">Pepperoni</label>
                                     </div>
-                                    <br><br>
-                                    <button type="submit" class="btn btn-light proceed">Proceed</button>
-
+                                    <div class="custom-control custom-checkbox custom-control-inline">
+                                        <input type="checkbox" class="custom-control-input" id="Black olives"
+                                            value="Black olives" name="toppings">
+                                        <label class="custom-control-label" for="Black olives">Black olives
+                                            <br><br>
+                                            <button type="submit" class="btn btn-warning proceed">Proceed</button>
+                                    </div>
                                 </form>
                             </div>
                             <div class="col-sm-7">
@@ -209,7 +185,6 @@
                                                 <tr>
                                                     <th scope="col">Name</th>
                                                     <th scope="col">Size</th>
-                                                    <th scope="col">Crust</th>
                                                     <th scope="col">Topping</th>
                                                     <th scope="col">Total</th>
                                                 </tr>
@@ -218,7 +193,6 @@
                                                 <tr>
                                                     <td id="pizzaname"></td>
                                                     <td id="pizzasize"></td>
-                                                    <td id="pizzacrust"></td>
                                                     <td id="pizzatopping"></td>
                                                     <td id="totals"></td>
                                                 </tr>
@@ -229,9 +203,8 @@
                                         <p id="addedprice">Delivery will cost $20</p>
                                         <p id="finalmessage"></p>
                                     </div>
-                                    <button class="btn btn-orange addPizza">Add art</button>
-                                    <button class="btn btn-orange" id="checkout">Checkout</button>
-                                    <button class="btn btn-orange deliver">Home delivery?</button>
+                                    <button class=" btn btn-warning" id="checkout">Checkout</button>
+                                    <button class="btn btn-warning deliver">Home delivery?</button>
                                 </div>
                                 <div class="delivery">
                                     <form action="">
@@ -249,8 +222,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div id="Order" class="row">
                     <div class="row">
                         <div class="card-body-warning" role="alert">
