--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PIZZA HUT</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -124,54 +124,54 @@
                         <div class="controls-top text-center" id="Order-now"> </div>
                         <div class="row">
                             <div class="col-sm-5">
-                                    <select class="custom-select custom-select-md mb-3 name">
-                                        <option value="BBQ Chicken">BBQ Chicken</option>
-                                        <option value="Pepperoni Pizza">Pepperoni Pizza</option>
-                                        <option value="BBQ Deluxe">BBQ Deluxe</option>
-                                        <option value="Alla vodka">Alla vodka</option>
-                                        <option value="Hawaiian Pizza">Hawaiian Pizza</option>
-                                        <option value="Broccoli sausage">Broccoli sausage</option>
-                                        <option value="Pasta">Pasta</option>
-                                        <option value="Meat-Lover’s Pizza">Meat-Lover’s Pizza</option>
-                                        <option value="Bacon & Pineapple">Bacon & Pineapple</option>
-                                        <option value="Pineapple">Pineapple</option>
-                                        <option value="Margherita">Margherita</option>
-                                    </select>
-                                    <label for="select">Select Size</label>
-                                    <select class=" custom-select custom-select-md mb-3" id="size">
-                                        <option selected value="0">Select size here</option>
-                                        <option value="large">Large -- $20</option>
-                                        <option value="medium">Medium -- $10</option>
-                                        <option value="small">Small -- $9</option>
-                                    </select>
-                                    <label for="Toppings">Select Your Toppings at $5 each</label><br>
-                                    <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" class="custom-control-input" id="Extra cheese"
-                                            value="Extra cheese" name="toppings">
-                                        <label class="custom-control-label" for="Extra cheese">Extra cheese</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" class="custom-control-input" id="Black olives."
-                                            value="Black olives." name="toppings">
-                                        <label class="custom-control-label" for="Sausage">Sausage</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" class="custom-control-input" id="Bacon" value="Bacon"
-                                            name="toppings">
-                                        <label class="custom-control-label" for="Bacon">Bacon</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" class="custom-control-input" id="Pepperoni"
-                                            value="Pepperoni" name="toppings">
-                                        <label class="custom-control-label" for="Pepperoni">Pepperoni</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox custom-control-inline">
-                                        <input type="checkbox" class="custom-control-input" id="Black olives"
-                                            value="Black olives" name="toppings">
-                                        <label class="custom-control-label" for="Black olives">Black olives
-                                            <br><br>
-                                            <button type="submit" class="btn btn-warning proceed">Proceed</button>
-                                    </div>
+                                <select class="custom-select custom-select-md mb-3 name">
+                                    <option value="BBQ Chicken">BBQ Chicken</option>
+                                    <option value="Pepperoni Pizza">Pepperoni Pizza</option>
+                                    <option value="BBQ Deluxe">BBQ Deluxe</option>
+                                    <option value="Alla vodka">Alla vodka</option>
+                                    <option value="Hawaiian Pizza">Hawaiian Pizza</option>
+                                    <option value="Broccoli sausage">Broccoli sausage</option>
+                                    <option value="Pasta">Pasta</option>
+                                    <option value="Meat-Lover’s Pizza">Meat-Lover’s Pizza</option>
+                                    <option value="Bacon & Pineapple">Bacon & Pineapple</option>
+                                    <option value="Pineapple">Pineapple</option>
+                                    <option value="Margherita">Margherita</option>
+                                </select>
+                                <label for="select">Select Size</label>
+                                <select class=" custom-select custom-select-md mb-3" id="size">
+                                    <option selected value="0">Select size here</option>
+                                    <option value="large">Large -- $20</option>
+                                    <option value="medium">Medium -- $10</option>
+                                    <option value="small">Small -- $9</option>
+                                </select>
+                                <label for="Toppings">Select Your Toppings at $5 each</label><br>
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="Extra cheese"
+                                        value="Extra cheese" name="toppings">
+                                    <label class="custom-control-label" for="Extra cheese">Extra cheese</label>
+                                </div>
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="Black olives."
+                                        value="Black olives." name="toppings">
+                                    <label class="custom-control-label" for="Sausage">Sausage</label>
+                                </div>
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="Bacon" value="Bacon"
+                                        name="toppings">
+                                    <label class="custom-control-label" for="Bacon">Bacon</label>
+                                </div>
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="Pepperoni" value="Pepperoni"
+                                        name="toppings">
+                                    <label class="custom-control-label" for="Pepperoni">Pepperoni</label>
+                                </div>
+                                <div class="custom-control custom-checkbox custom-control-inline">
+                                    <input type="checkbox" class="custom-control-input" id="Black olives"
+                                        value="Black olives" name="toppings">
+                                    <label class="custom-control-label" for="Black olives">Black olives
+                                        <br><br>
+                                        <button type="submit" class="btn btn-warning proceed">Proceed</button>
+                                </div>
                                 </form>
                             </div>
                             <div class="col-sm-7">
