--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                         <div class="controls-top text-center" id="Order-now"> </div>
                         <div class="row">
                             <div class="col-sm-5">
+                                <label for="select">Order here</label>
                                 <select class="custom-select custom-select-md mb-3 name">
                                     <option value="BBQ Chicken">BBQ Chicken</option>
                                     <option value="Pepperoni Pizza">Pepperoni Pizza</option>
@@ -136,23 +137,32 @@
                                 </select>
                                 <label for="select">Topping's</label>
                                 <select class="custom-select custom-select-md mb-3 name">
-                                    <option value="BBQ Chicken">BBQ Chicken</option>
-                                    <option value="Pepperoni Pizza">Pepperoni Pizza</option>
-                                    <option value="BBQ Deluxe">BBQ Deluxe</option>
-                                    <option value="Hawaiian Pizza">Hawaiian Pizza</option>
-                                    <option value="Broccoli sausage">Broccoli sausage</option>
+                                    <option value="Extra cheese">Extra cheese</option>
+                                    <option value="Black olives">Black olives</option>
+                                    <option value="Onions.">Onions.</option>
+                                    <option value="Sausage"> sausage</option>
                                     <option value="Pasta">Pasta</option>
-                                    <option value="Meat-Lover’s Pizza">Meat-Lover’s Pizza</option>
+                                    <option value="Spinach">Spinach</option>
                                     <option value="Bacon & Pineapple">Bacon & Pineapple</option>
                                     <option value="Pineapple">Pineapple</option>
-                                    <option value="Margherita">Margherita</option>
+                                    <option value="Green peppers">Green peppers</option>
+                                </select>
+                                <label for="crust">Crust</label>
+                                <select class=" custom-select custom-select-md mb-3" id="crust">
+                                    <option selected value="0">Select your preferred crust!</option>
+                                    <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust --$3</option>
+                                    <option value="Pizza Bagels">Pizza Bagels $2 </option>
+                                    <option value="Thin Crust">Thin Crust $1</option>
+                                    <option value="Flatbread">Flatbread $1</option>
+                                    <option value="Sicilian Style">Sicilian Style $1</option>
+                                    <option value="Chicago Deep Dish">Chicago Deep Dish $1</option>
                                 </select>
                                 <label for="select">Select Size</label>
                                 <select class=" custom-select custom-select-md mb-3" id="size">
                                     <option selected value="0">Select size here</option>
-                                    <option value="large">Large -- $20</option>
-                                    <option value="medium">Medium -- $10</option>
-                                    <option value="small">Small -- $9</option>
+                                    <option value="large">Large $20</option>
+                                    <option value="medium">Medium $10</option>
+                                    <option value="small">Small $9</option>
                                 </select>
                                 <label for="Toppings">Select Your Toppings at $7 each</label><br>
                                 <div class="custom-control custom-checkbox custom-control-inline">
