--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 </select>
                                 <label for="crust">Crust</label>
                                 <select class=" custom-select custom-select-md mb-3" id="crust">
-                                    <option selected value="0">Select your preferred crust!</option>
+                                    <option selected value="0">Select your favourite crust</option>
                                     <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust --$3</option>
                                     <option value="Pizza Bagels">Pizza Bagels $2 </option>
                                     <option value="Thin Crust">Thin Crust $1</option>
