adding delivery checkout form on js

--- a/index.html
+++ b/index.html
@@ -137,15 +137,13 @@
                                 </select>
                                 <label for="select">Topping's</label>
                                 <select class="custom-select custom-select-md mb-3 name">
-                                    <option value="Extra cheese">Extra cheese</option>
-                                    <option value="Black olives">Black olives</option>
-                                    <option value="Onions.">Onions.</option>
-                                    <option value="Sausage"> sausage</option>
-                                    <option value="Pasta">Pasta</option>
-                                    <option value="Spinach">Spinach</option>
-                                    <option value="Bacon & Pineapple">Bacon & Pineapple</option>
-                                    <option value="Pineapple">Pineapple</option>
-                                    <option value="Green peppers">Green peppers</option>
+                                    <option value="Extra cheese">Extra cheese $1 </option>
+                                    <option value="Black olives">Black olives $1 </option>
+                                    <option value="Onions.">Onions $1 </option>
+                                    <option value="Sausage"> sausage $1 </option>
+                                    <option value="Spinach">Spinach $1</option>
+                                    <option value="Pasta">Pasta $1 </option>
+                                    <option value="Green peppers">Green peppers $1 </option>
                                 </select>
                                 <label for="crust">Crust</label>
                                 <select class=" custom-select custom-select-md mb-3" id="crust">
@@ -164,14 +162,10 @@
                                     <option value="medium">Medium $10</option>
                                     <option value="small">Small $9</option>
                                 </select>
-                                <label for="Toppings">Select Your Toppings at $7 each</label><br>
-
+                                <br>
                                 <div class="custom-control custom-checkbox custom-control-inline">
-                                    <input type="checkbox" class="custom-control-input" id="Black olives"
-                                        value="Black olives" name="toppings">
-                                    <label class="custom-control-label" for="Black olives">Black olives
-                                        <br><br>
-                                        <button type="submit" class="btn btn-warning proceed">Proceed</button>
+                                    <br><br>
+                                    <button type="submit" class="btn btn-warning proceed">Proceed</button>
                                 </div>
                                 </form>
                             </div>
