editing crust js

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                                                     <th scope="col">Name</th>
                                                     <th scope="col">Size</th>
                                                     <th scope="col">Topping</th>
+                                                    <th scope="col">Crust</th>
                                                     <th scope="col">Total</th>
                                                 </tr>
                                             </thead>
@@ -187,12 +188,13 @@
                                                     <td id="pizzaname"></td>
                                                     <td id="pizzasize"></td>
                                                     <td id="pizzatopping"></td>
+                                                    <td id="pizzacrust"></td>
                                                     <td id="totals"></td>
                                                 </tr>
                                             </tbody>
                                         </table>
                                         <p id="pizzatotal"></p>
-                                        <p id="totalbill"></p>
+                                        <p id="totalamount"></p>
                                         <p id="addedprice">Delivery will cost $20</p>
                                         <p id="finalmessage"></p>
                                     </div>
