adding adding location form js

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                                     <option value="Green peppers">Green peppers $1 </option>
                                 </select>
                                 <label for="crust">Crust</label>
-                                <select class=" custom-select custom-select-md mb-3" id="crust">
+                                <select class="browser-default custom-select custom-select-md mb-3" id="crust">
                                     <option selected value="0">Select your favourite crust</option>
-                                    <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust --$3</option>
+                                    <option value="Cheese-Stuffed Crust">Cheese-Stuffed Crust $3</option>
                                     <option value="Pizza Bagels">Pizza Bagels $2 </option>
                                     <option value="Thin Crust">Thin Crust $1</option>
                                     <option value="Flatbread">Flatbread $1</option>
@@ -156,7 +156,7 @@
                                     <option value="Chicago Deep Dish">Chicago Deep Dish $2</option>
                                 </select>
                                 <label for="select">Select Size</label>
-                                <select class=" custom-select custom-select-md mb-3" id="size">
+                                <select class="browser-default custom-select custom-select-md mb-3" id="size">
                                     <option selected value="0">Select size here</option>
                                     <option value="large">Large $20</option>
                                     <option value="medium">Medium $10</option>
