adding size function js

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <p>select your favorite Pizza:</p>
+                            <p>All your Favorite's in one place, Take your pick</p>
                             <select id="menu">
                                 <option>BBQ Deluxe</option>
                                 <option>Hawaiian Pizza</option>
@@ -194,8 +194,8 @@
                                             </tbody>
                                         </table>
                                         <p id="pizzatotal"></p>
-                                        <p id="totalamount"></p>
-                                        <p id="addedprice">Delivery will cost $20</p>
+                                        <p id="totalbill"></p>
+                                        <p id="addedprice">Delivery will cost $2</p>
                                         <p id="finalmessage"></p>
                                     </div>
                                     <button class=" btn btn-warning" id="checkout">Checkout</button>
