adding indentation and spacing js

--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
                                 <select class="custom-select custom-select-md mb-3 name">
                                     <option value="Extra cheese">Extra cheese $1 </option>
                                     <option value="Black olives">Black olives $1 </option>
-                                    <option value="Onions.">Onions $1 </option>
+                                    <option value="Onions">Onions $1 </option>
                                     <option value="Sausage"> sausage $1 </option>
                                     <option value="Spinach">Spinach $1</option>
-                                    <option value="Pasta">Pasta $1 </option>
                                     <option value="Green peppers">Green peppers $1 </option>
                                 </select>
                                 <label for="crust">Crust</label>
@@ -198,6 +197,7 @@
                                         <p id="addedprice">Delivery will cost $2</p>
                                         <p id="finalmessage"></p>
                                     </div>
+                                    <button class="btn btn-warning addPizza">Select another Pizza</button>
                                     <button class=" btn btn-warning" id="checkout">Checkout</button>
                                     <button class="btn btn-warning deliver">Home delivery?</button>
                                 </div>
