editing delivery form js

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                     </div>
                                     <button class="btn btn-warning addPizza">Select another Pizza</button>
                                     <button class=" btn btn-warning" id="checkout">Checkout</button>
-                                    <button class="btn btn-warning deliver">Home delivery?</button>
+                                    <button class="btn btn-warning deliver">Delivery Form</button>
                                 </div>
                                 <div class="delivery">
                                     <form action="">
@@ -209,7 +209,7 @@
                                                 placeholder="Pnone Number">
                                             <input type="text" id="location" class="form-control mb-3"
                                                 placeholder="Location for delivery">
-                                            <button class="btn btn-orange" id="final-order">Place Order</button>
+                                            <button class="btn btn-warning" id="final-order">Place Order</button>
                                         </div>
                                     </form>
                                 </div>
