--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                     </div>
                                     <button class="btn btn-warning addPizza">Select another Pizza</button>
                                     <button class=" btn btn-warning" id="checkout">Checkout</button>
-                                    <button class="btn btn-warning deliver">Delivery Form</button>
+                                    <button class="btn btn-warning delivery">Delivery</button>
                                 </div>
                                 <div class="delivery">
                                     <form action="">
